--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .hero-container {
-  background-image: url("images//Users/matthewchabalowski/repos/sign-up-form/images/halie-west-25xggax4bSA-unsplash.jpg");
+  background-image: url("./images/halie-west-25xggax4bSA-unsplash.jpg");
 }
 
 .form-container {
