--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 .left-page {
   background-image: url("./images/halie-west-25xggax4bSA-unsplash.jpg");
+  background-size: contain;
   text-align: center;
 }
 
