--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: nordic;
+  src: url("fonts/"Norse-Bold.otf");
+}
+
 * {
   margin: 2px;
   padding: 2px;
@@ -10,13 +15,34 @@ body {
 
 .left-page {
   background-image: url("./images/halie-west-25xggax4bSA-unsplash.jpg");
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.left-page img {
+  width:  104px;
+  height: 104px;
+}
+
+.right-page {
+  height: 100vh;
+}
+
+.odin-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 div.odin-container p {
   color: white;
-  display: inline;
+  font-family: nordic;
 }
 
 .form-container {
