--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 @font-face {
   font-family: nordic;
-  src: url("fonts/"Norse-Bold.otf");
+  src: url("./fonts/Norse-Bold.otf");
 }
-
 * {
   margin: 2px;
   padding: 2px;
@@ -37,12 +36,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  width: 300px;
+  height: 150px;
+  background: black;
+  opacity: .70;
 }
 
 div.odin-container p {
   color: white;
-  font-family: nordic;
+  font-family: nordic, serif;
+  font-size: 3rem;
 }
 
 .form-container {
