--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ body {
   height: 100vh;
 }
 
+.right-page-p {
+  margin-top: 2rem;
+  font-size: 1.5rem;
+}
+
+
+
 .odin-container {
   display: flex;
   justify-content: center;
@@ -60,6 +67,9 @@ div.odin-container p {
   display: flex;
   background: white;
   box-shadow: 0px 2px 2px 0px grey;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 1rem;
 }
 
 .left-box {
@@ -70,6 +80,16 @@ div.odin-container p {
 .right-box {
   display: flex;
   flex-direction: column;
+}
+
+button {
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  width: 200px;
+  height: 48px;
+  background: darkolivegreen;
+  border-radius: 8px;
+  color: white;
 }
 
 #right-link:visited {
