--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ div.odin-container p {
   padding: 1rem;
 }
 
+input:focus {
+  box-shadow: 0 0 2px 2px blue;
+}
+
 .left-box {
   display: flex;
   flex-direction: column;
